--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,react,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,react,node
+###제외 파일
+DB_data/images/
 
 ### Node ###
 # Logs
