add file, modified
gitignore수정
speech_to_text 파일 업로드
만개의 레시피 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,react,node
 ###제외 파일
 DB_data/images/
+DB_data/data/
 
 ### Node ###
 # Logs
