--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mybatis-mapper": "^0.6.5",
     "mysql2": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.3"
   },
   "devDependencies": {},
