--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "mybatis-mapper": "^0.6.5",
     "mysql2": "^2.0.2",
+    "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
