--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "react-scroll-button": "^1.1.2",
     "react-social-login-buttons": "^3.5.0",
     "web-vitals": "^1.0.1"
